<?xml version="1.0" encoding="utf-8"?>
<!-- 
	Copyright (C) 2010 Herbert von Broeuschmeul
	Copyright (C) 2010 BluetoothGPS4Droid Project
	  
	This file is part of BluetoothGPS4Droid.
	
	BluetoothGPS4Droid is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	BluetoothGPS4Droid is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with BluetoothGPS4Droid. If not, see : http://www.gnu.org/licenses/.
-->
<resources>
    <string name="app_name">BlueGps</string>
    
    <string name="sirf_nmea_gga_on">PSRF103,00,00,01,01</string>
    <string name="sirf_nmea_rmc_on">PSRF103,04,00,01,01</string>
    <string name="sirf_nmea_gll_on">PSRF103,01,00,01,01</string>
    <string name="sirf_nmea_gll_off">PSRF103,01,00,00,01</string>
    <string name="sirf_nmea_gsa_on">PSRF103,02,00,05,01</string>
    <string name="sirf_nmea_gsa_off">PSRF103,02,00,00,01</string>
    <string name="sirf_nmea_gsv_on">PSRF103,03,00,05,01</string>
    <string name="sirf_nmea_gsv_off">PSRF103,03,00,00,01</string>
    <string name="sirf_nmea_vtg_on">PSRF103,05,00,01,01</string>
    <string name="sirf_nmea_vtg_off">PSRF103,05,00,00,01</string>
    <string name="sirf_nmea_zda_on">PSRF103,08,00,01,01</string>
    <string name="sirf_nmea_zda_off">PSRF103,08,00,00,01</string>

    <string name="sirf_nmea_to_binary">PSRF100,0,38400,8,1,0</string>
    
    <string name="sirf_nmea_sbas_on">PSRF151,01</string>
    <string name="sirf_nmea_sbas_off">PSRF151,00</string>
    
<!--
    <string name="sirf_sbas_on">$PSRF151,01*0F</string>
    <string name="sirf_sbas_off">$PSRF151,00*0E</string>  
-->
    <string name="sirf_bin_static_nav_on">8F01</string>
    <string name="sirf_bin_static_nav_off">8F00</string> 
    <string name="sirf_bin_to_nmea">8702</string>
    <string name="sirf_bin_to_nmea_38400">810201010001050105010001000100010001000100019600</string>
    <string name="sirf_bin_to_nmea_38400_alt">8102%02X01%02X01%02X01%02X01%02X01%02X01%02X01%02X01%02X0100019600</string>
    <string name="sirf_bin_dgps_ext_on">85020000000000</string>
    <string name="sirf_bin_dgps_sbas_on">85010000000000</string>
    <string name="sirf_software_version">8400</string>
    
    
    <!--
    <string name="sirf_bin_to_nmea4800_1">A0A20018 8102010100010501050100010001000100010001000112C0 016AB0B3</string>
    <string name="sirf_bin_to_nmea_on_2">A0A20002 8702 0089B0B3</string>
    <string name="sirf_bin_dgps_ext_on">A0A20007 85020000000000 0087B0B3</string>
    <string name="sirf_bin_dgps_sbas_on">A0A20007 85010000000000 0086B0B3</string>
    -->
    
    <string name="pref_start_gps_key">startGps</string>
    <string name="pref_gps_location_provider_key">gpsLocationProviderKey</string>
    <string name="pref_replace_std_gps_key">replaceStdtGps</string>
    <string name="pref_mock_gps_name_key">mockGpsName</string>
    <string name="pref_recording_key">trackRecording</string>
    <string name="pref_trackfile_directory_key">trackFileDirectory</string>
    <string name="pref_trackfile_prefix_key">trackFilePrefix</string>
    <string name="pref_bluetooth_device_key">bluetoothDevice</string>
    
    <string name="pref_sirf_gps_key">sirfGps</string>
    <string name="pref_sirf_enable_gll_key">enableGLL</string>
    <string name="pref_sirf_enable_vtg_key">enableVTG</string>
    <string name="pref_sirf_enable_gsa_key">enableGSA</string>
    <string name="pref_sirf_enable_gsv_key">enableGSV</string>
    <string name="pref_sirf_enable_zda_key">enableZDA</string>
    <string name="pref_sirf_enable_sbas_key">enableSBAS</string>
    <string name="pref_sirf_enable_nmea_key">enableNMEA</string>
    <string name="pref_sirf_enable_static_navigation_key">enableStaticNavigation</string>

    <string name="defaultTrackMinDistance">0.0</string>
    <string name="defaultTrackMinTime">0</string>
    <string name="defaultTrackFileDirectory">/sdcard/nmea</string>
    <string name="defaultTrackFilePrefix">btnmeatrack</string>
    <string name="defaultMockGpsName">bluetooth_gps</string>
    
    <string name="pref_start_gps_title">Start/Stop GPS</string>
    <string name="pref_start_gps_summary_off">Bluetooth GPS is off</string>
    <string name="pref_start_gps_summary_on">Bluetooth GPS is on</string>
    <string name="pref_start_gps_params_title">GPS Options (SiRF)</string>
    <string name="pref_gps_location_provider_title">Location provider options</string>
    <string name="pref_gps_location_provider_summary">Bluetooth GPS will replace internal GPS</string>
    <string name="pref_replace_std_gps_title">Replace internal GPS</string>
    <string name="pref_replace_std_gps_summary_on">Bluetooth GPS will replace internal GPS</string>
    <!--  
    <string name="pref_replace_std_gps_summary_off">Internal GPS will remain available</string>
    -->
    <string name="pref_replace_std_gps_summary_off">Bluetooth GPS will use a new location provider</string>
    <string name="pref_mock_gps_name_title">Mock location provider name</string>
    <string name="pref_mock_gps_name_summary">Bluetooth GPS name: %s</string>
    <string name="pref_recording_title">Enable/Disable NMEA log</string>
    <string name="pref_recording_summary_off">Track recording is off</string>
    <string name="pref_recording_summary_on">Track recording is on</string>
    <string name="pref_recording_params_title">Recording parameters</string>
    <string name="pref_mintime_title">Time between records</string>
    <string name="pref_mintime_summary">Time between records in milliseconds</string>
    <string name="pref_mindistance_title">Distance between records</string>
    <string name="pref_mindistance_summary">Distance between records in meters</string>
    <string name="pref_trackfile_prefix_title">Trackfiles prefix</string>
    <string name="pref_trackfile_prefix_summary">Select the prefix for the track files</string>
    <string name="pref_trackfile_directory_title">Trackfiles directory</string>
    <string name="pref_trackfile_directory_summary">Select the directory for the track files</string>
    <string name="pref_bluetooth_device_title">Choose Bluetooth GPS</string>
    <string name="pref_bluetooth_device_summary">"Current device: %s"</string>    

    <string name="pref_sirf_gps_title">SiRF GPS</string>
    <string name="pref_sirf_gps_summary_off">"Use SiRF Options"</string>
    <string name="pref_sirf_gps_summary_on">"Don't SiRF Options"</string>
    <string name="pref_sirf_nmea_category_title">Choice of NMEA sentences</string>
    <string name="pref_sirf_gps_category_title">GPS operation</string>
    <string name="pref_enable_gll_title">Enable NMEA GLL</string>
    <string name="pref_enable_gll_summary_off">NMEA GLL sentences are off</string>
    <string name="pref_enable_gll_summary_on">NMEA GLL sentences are on</string>
    <string name="pref_enable_vtg_title">Enable NMEA VTG</string>
    <string name="pref_enable_vtg_summary_off">NMEA VTG sentences are off</string>
    <string name="pref_enable_vtg_summary_on">NMEA VTG sentences are on</string>
    <string name="pref_enable_gsa_title">Enable NMEA GSA</string>
    <string name="pref_enable_gsa_summary_off">NMEA GSA sentences are off</string>
    <string name="pref_enable_gsa_summary_on">NMEA GSA sentences are on</string>
    <string name="pref_enable_gsv_title">Enable NMEA GSV</string>
    <string name="pref_enable_gsv_summary_off">NMEA GSV sentences are off</string>
    <string name="pref_enable_gsv_summary_on">NMEA GSV sentences are on</string>
    <string name="pref_enable_zda_title">Enable NMEA ZDA</string>
    <string name="pref_enable_zda_summary_off">NMEA ZDA sentences are off</string>
    <string name="pref_enable_zda_summary_on">NMEA ZDA sentences are on</string>
    <string name="pref_enable_sbas_title">SBAS (WAAS/EGNOS)</string>
    <string name="pref_enable_sbas_summary_off">SBAS is off</string>
    <string name="pref_enable_sbas_summary_on">SBAS is on</string>
    <string name="pref_enable_nmea_title">NMEA/Binary mode</string>
    <string name="pref_enable_nmea_summary_off">Binary mode is on</string>
    <string name="pref_enable_nmea_summary_on">NMEA mode is on</string>
    <string name="pref_enable_static_navigation_title">Static Navigation</string>
    <string name="pref_enable_static_navigation_summary_off">Static Navigation disabled</string>
    <string name="pref_enable_static_navigation_summary_on">Static Navigation enabled</string>

    <string name="msg_gps_provider_started">Bluetooth GPS... started</string>
    <string name="msg_gps_provider_stopped">Bluetooth GPS... stopped</string>
    <string name="msg_gps_provider_already_started">Bluetooth GPS... is already on</string>
    <string name="msg_nmea_recording_started">GPS NMEA recording... started</string>
    <string name="msg_nmea_recording_stopped">GPS NMEA recording... stopped</string>
    <string name="msg_nmea_recording_already_started">GPS track recording... is already on</string>
    <string name="foreground_service_started_notification_title">BlueGps</string>
    <string name="foreground_gps_provider_started_notification">BlueGps service started</string>
    <string name="foreground_nmea_recording_started_notification">BlueGps NMEA recording service started</string>
    <string name="connection_problem_notification_title">BlueGps: connection problem</string>
    <plurals name="connection_problem_notification">
    	<item quantity="one">will retry one more time before closing</item>
    	<item quantity="other">will retry %d more times before closing</item>
    </plurals>
    <!-- 
    <string name="connection_problem_notification">Have tried %d times - will retry %d more times</string>
    -->
    <string name="service_closed_because_connection_problem_notification_title">BlueGps stopped</string>
    <string name="service_closed_because_connection_problem_notification">Reason: too many connection problems</string>
</resources>
