<?xml version="1.0" encoding="utf-8"?><!--
	Copyright (C) 2010, 2011, 2012 Herbert von Broeuschmeul
	Copyright (C) 2010, 2011, 2012 BluetoothGPS4Droid Project
	Copyright (C) 2011, 2012 UsbGPS4Droid Project
	  
	This file is part of UsbGPS4Droid.
	
    UsbGPS4Droid is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    UsbGPS4Droid is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with UsbGPS4Droid.  If not, see http://www.gnu.org/licenses/
    
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">
    <ListPreference
        android:dialogTitle="@string/pref_gps_device_title"
        android:key="@string/pref_gps_device_key"
        android:summary="@string/pref_gps_device_summary"
        android:title="@string/pref_gps_device_title"
        android:dependency="@string/pref_start_gps_key" />
    <ListPreference
        android:defaultValue="@string/defaultGpsDeviceSpeed"
        android:dependency="@string/pref_start_gps_key"
        android:dialogTitle="@string/pref_gps_device_speed_title"
        android:enabled="true"
        android:entries="@array/pref_gps_device_speed_values"
        android:entryValues="@array/pref_gps_device_speed_values"
        android:key="@string/pref_gps_device_speed_key"
        android:persistent="true"
        android:title="@string/pref_gps_device_speed_title" />
    <CheckBoxPreference
        android:disableDependentsState="true"
        android:key="@string/pref_start_gps_key"
        android:persistent="true"
        android:summaryOff="@string/pref_start_gps_summary_off"
        android:summaryOn="@string/pref_start_gps_summary_on"
        android:title="@string/pref_start_gps_title" />
    <PreferenceScreen
        android:dependency="@string/pref_start_gps_key"
        android:key="@string/pref_gps_location_provider_key"
        android:shouldDisableView="true"
        android:summary="@string/pref_gps_location_provider_summary"
        android:title="@string/pref_gps_location_provider_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="@string/pref_replace_std_gps_key"
            android:persistent="true"
            android:summaryOff="@string/pref_replace_std_gps_summary_off"
            android:summaryOn="@string/pref_replace_std_gps_summary_on"
            android:title="@string/pref_replace_std_gps_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_force_enable_provider_key"
            android:persistent="true"
            android:summaryOff="@string/pref_force_enable_provider_summary_off"
            android:summaryOn="@string/pref_force_enable_provider_summary_on"
            android:title="@string/pref_force_enable_provider_title" />
        <EditTextPreference
            android:defaultValue="@string/defaultMockGpsName"
            android:dependency="@string/pref_replace_std_gps_key"
            android:key="@string/pref_mock_gps_name_key"
            android:summary="@string/pref_mock_gps_name_summary"
            android:title="@string/pref_mock_gps_name_title" />
        <EditTextPreference
            android:defaultValue="@string/defaultConnectionRetries"
            android:inputType="numberDecimal"
            android:key="@string/pref_connection_retries_key"
            android:summary="@string/pref_connection_retries_summary"
            android:title="@string/pref_connection_retries_title" />
    </PreferenceScreen>
    <CheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="false"
        android:enabled="true"
        android:key="@string/pref_sirf_gps_key"
        android:persistent="true"
        android:summaryOff="@string/pref_sirf_gps_summary_off"
        android:summaryOn="@string/pref_sirf_gps_summary_on"
        android:title="@string/pref_sirf_gps_title" />
    <PreferenceScreen
        android:dependency="@string/pref_sirf_gps_key"
        android:orderingFromXml="true"
        android:shouldDisableView="true"
        android:title="@string/pref_start_gps_params_title">
        <PreferenceCategory
            android:order="200"
            android:orderingFromXml="true"
            android:title="@string/pref_sirf_nmea_category_title">
            <CheckBoxPreference
                android:defaultValue="true"
                android:enabled="false"
                android:key="@string/pref_sirf_enable_gga_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_gga_summary_off"
                android:summaryOn="@string/pref_enable_gga_summary_on"
                android:title="@string/pref_enable_gga_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:enabled="false"
                android:key="@string/pref_sirf_enable_rmc_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_rmc_summary_off"
                android:summaryOn="@string/pref_enable_rmc_summary_on"
                android:title="@string/pref_enable_rmc_title" />
            <CheckBoxPreference
                android:key="@string/pref_sirf_enable_gsa_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_gsa_summary_off"
                android:summaryOn="@string/pref_enable_gsa_summary_on"
                android:title="@string/pref_enable_gsa_title" />
            <CheckBoxPreference
                android:key="@string/pref_sirf_enable_gsv_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_gsv_summary_off"
                android:summaryOn="@string/pref_enable_gsv_summary_on"
                android:title="@string/pref_enable_gsv_title" />
            <CheckBoxPreference
                android:key="@string/pref_sirf_enable_vtg_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_vtg_summary_off"
                android:summaryOn="@string/pref_enable_vtg_summary_on"
                android:title="@string/pref_enable_vtg_title" />
            <CheckBoxPreference
                android:key="@string/pref_sirf_enable_gll_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_gll_summary_off"
                android:summaryOn="@string/pref_enable_gll_summary_on"
                android:title="@string/pref_enable_gll_title" />
            <CheckBoxPreference
                android:key="@string/pref_sirf_enable_zda_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_zda_summary_off"
                android:summaryOn="@string/pref_enable_zda_summary_on"
                android:title="@string/pref_enable_zda_title" />
        </PreferenceCategory>
        <PreferenceCategory
            android:order="100"
            android:title="@string/pref_sirf_gps_category_title">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/pref_sirf_enable_sbas_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_sbas_summary_off"
                android:summaryOn="@string/pref_enable_sbas_summary_on"
                android:title="@string/pref_enable_sbas_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:enabled="false"
                android:key="@string/pref_sirf_enable_nmea_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_nmea_summary_off"
                android:summaryOn="@string/pref_enable_nmea_summary_on"
                android:title="@string/pref_enable_nmea_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/pref_sirf_enable_static_navigation_key"
                android:persistent="true"
                android:summaryOff="@string/pref_enable_static_navigation_summary_off"
                android:summaryOn="@string/pref_enable_static_navigation_summary_on"
                android:title="@string/pref_enable_static_navigation_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <CheckBoxPreference
        android:enabled="true"
        android:key="@string/pref_recording_key"
        android:persistent="true"
        android:summaryOff="@string/pref_recording_summary_off"
        android:summaryOn="@string/pref_recording_summary_on"
        android:title="@string/pref_recording_title" />
    <PreferenceScreen android:title="@string/pref_recording_params_title">
        <EditTextPreference
            android:defaultValue="@string/defaultTrackFileDirectory"
            android:key="@string/pref_trackfile_directory_key"
            android:summary="@string/pref_trackfile_directory_summary"
            android:title="@string/pref_trackfile_directory_title" />
        <EditTextPreference
            android:defaultValue="@string/defaultTrackFilePrefix"
            android:key="@string/pref_trackfile_prefix_key"
            android:summary="@string/pref_trackfile_prefix_summary"
            android:title="@string/pref_trackfile_prefix_title" />
    </PreferenceScreen>
    <Preference
        android:key="@string/pref_about_key"
        android:persistent="false"
        android:summary="@string/pref_about_summary"
        android:title="@string/pref_about_title" />
</PreferenceScreen>
